--- a/_sass/partials/_app.scss
+++ b/_sass/partials/_app.scss
@@ -95,6 +95,7 @@ main {
   max-width: 52rem;
   margin-right: auto;
   margin-left: auto;
+  grid-column: main;
   display: grid;
   padding-top: 8rem;
   padding-bottom: 8rem;
